atasan dan bawahan relationn
